# api-sec

./: .gitignore  README.md  pyproject.toml
noir_agent/: __init__.py  cli.py  code_analyzer.py  groq_processor.py  models.py  noir_runner.py  pipeline.py  postman.py  repo_manager.py  schema.py  webapp.py
noir_agent/templates/: base.html  index.html  result.html
